--- a/pom.xml
+++ b/pom.xml
@@ -154,4 +154,20 @@
         </repository>
     </repositories>
 
+    <distributionManagement>
+        <repository>
+            <id>github</id>
+            <name>GitHub OWNER Apache Maven Packages</name>
+            <url>https://maven.pkg.github.com/Informatievlaanderen/VSDS-LDESClientCli</url>
+        </repository>
+    </distributionManagement>
+
+
+    <scm>
+        <connection>scm:git:${project.scm.url}</connection>
+        <developerConnection>scm:git:${project.scm.url}</developerConnection>
+        <url>git@github.com:Informatievlaanderen/VSDS-LDESClientCli.git</url>
+        <tag>HEAD</tag>
+    </scm>
+
 </project>
