--- a/pom.xml
+++ b/pom.xml
@@ -36,6 +36,10 @@
         <sonar.organization>informatievlaanderen</sonar.organization>
         <sonar.projectKey>Informatievlaanderen_VSDS-LDESClientCli
         </sonar.projectKey>
+
+        <!-- CODE FORMATTER -->
+        <formatter-maven-plugin.version>2.20.0</formatter-maven-plugin.version>
+        <skipFormatCode>false</skipFormatCode>
     </properties>
 
     <dependencies>
@@ -105,6 +109,23 @@
                         </goals>
                     </execution>
                 </executions>
+            </plugin>
+            <plugin>
+                <groupId>net.revelc.code.formatter</groupId>
+                <artifactId>formatter-maven-plugin</artifactId>
+                <version>${formatter-maven-plugin.version}</version>
+                <executions>
+                    <execution>
+                        <goals>
+                            <goal>validate</goal>
+                        </goals>
+                    </execution>
+                </executions>
+                <configuration>
+                    <skip>${skipFormatCode}</skip>
+                    <encoding>UTF-8</encoding>
+                    <configFile>${project.basedir}/settings.xml</configFile>
+                </configuration>
             </plugin>
         </plugins>
     </build>
