--- a/.github/workflows/build-project.yml
+++ b/.github/workflows/build-project.yml
@@ -36,9 +36,13 @@ jobs:
           key: ${{ runner.os }}-m2-${{ hashFiles('**/pom.xml') }}
           restore-keys: ${{ runner.os }}-m2
       - name: Build and analyze
+        if: ${{ github.event.pull_request.head.repo.full_name == 'VSDS-LDESClientCli' }}
         env:
           GITHUB_USER_REF: ${{ secrets.USER_NAME }} # Temporary hack to get around PAT for github packages
           GITHUB_TOKEN_REF: ${{ secrets.ACCESS_TOKEN }} # Temporary hack to get around PAT for github packages
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}  # Needed to get PR information, if any
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
         run: mvn -B verify org.sonarsource.scanner.maven:sonar-maven-plugin:sonar -Dsonar.projectKey=Informatievlaanderen_VSDS-LDESClientCli -Pcoverage
+      - name: Build (Forks) # https://portal.productboard.com/sonarsource/1-sonarcloud/c/50-sonarcloud-analyzes-external-pull-request
+        if: ${{ github.event.pull_request.head.repo.full_name != 'Informatievlaanderen/VSDS-LDESClientCli' }}
+        run: mvn -B verify -Dintegrationtestskip=true
