--- a/.github/workflows/pr-merged.yml
+++ b/.github/workflows/pr-merged.yml
@@ -50,4 +50,4 @@ jobs:
           context: .
           push: true
           tags: |
-            ${{ env.LDES_NIFI_DOCKER_IMAGE_NAME }}:latest , ${{ env.LDES_NIFI_DOCKER_IMAGE_NAME }}:${{ env.BUILD_DATE }}
+            latest , ${{ env.BUILD_DATE }}
