feat: VSDSPUB-151 Persisted state: add sqlite db to .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -11,11 +11,25 @@
 ### Local application files
 ###
 **/application-local.yml
+*.user
+*.local*
+*.db
 
 ###
 ### Makefiles
 ###
 .makefiles
+
+###
+### NIFI
+###
+nifi/
+
+###
+### LOG FILES
+###
+*.log
+logs/
 
 
 ###############################################################################
