feat: VSDSPUB-151 Persisted state: change ldes service call

--- a/pom.xml
+++ b/pom.xml
@@ -14,8 +14,8 @@
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
 
         <!-- Maven properties -->
-        <maven.compiler.source>17</maven.compiler.source>
-        <maven.compiler.target>17</maven.compiler.target>
+        <maven.compiler.source>18</maven.compiler.source>
+        <maven.compiler.target>18</maven.compiler.target>
         <maven-assembly-plugin.version>3.4.2</maven-assembly-plugin.version>
         <pmd-plugin.version>3.19.0</pmd-plugin.version>
         <maven-surefire-plugin.version>3.0.0-M7</maven-surefire-plugin.version>
@@ -51,13 +51,22 @@
         <formatter-maven-plugin.version>2.20.0</formatter-maven-plugin.version>
         <skipFormatCode>false</skipFormatCode>
     </properties>
+    
+    <dependencyManagement>
+    	<dependencies>
+			<dependency>
+				<groupId>be.vlaanderen.informatievlaanderen</groupId>
+	            <artifactId>ldes-client</artifactId>
+	            <version>${ldes-client.version}</version>
+			</dependency>
+		</dependencies>
+    </dependencyManagement>
 
     <dependencies>
     	<!-- VSDS -->
         <dependency>
             <groupId>be.vlaanderen.informatievlaanderen</groupId>
             <artifactId>ldes-client</artifactId>
-            <version>${ldes-client.version}</version>
         </dependency>
         
         <!-- Spring boot -->
