Fix/vsdspub 151/state (#39)
* feat: VSDSPUB-151 Persisted state: add sqlite db to .gitignore

* feat: VSDSPUB-151 Persisted state: change ldes service call

* feat: VSDSPUB-151 Persisted state: minor changes

* feat: VSDSPUB-151 Persisted state: add sqlite db to .gitignore

* feat: VSDSPUB-151 Persisted state: change ldes service call and fix exception test

* feat: VSDSPUB-151 Persistent state: merge with main and fix conflicts

* feat: VSDSPUB-151 Persistent state: revert jdk version (commit in different branch)

* feat: VSDSPUB-151 Persistent state: remove unused LangConverter

Co-authored-by: Stijn Verholen <boro@inuits.eu>

--- a/pom.xml
+++ b/pom.xml
@@ -51,13 +51,22 @@
         <formatter-maven-plugin.version>2.21.0</formatter-maven-plugin.version>
         <skipFormatCode>false</skipFormatCode>
     </properties>
+    
+    <dependencyManagement>
+    	<dependencies>
+			<dependency>
+				<groupId>be.vlaanderen.informatievlaanderen</groupId>
+	            <artifactId>ldes-client</artifactId>
+	            <version>${ldes-client.version}</version>
+			</dependency>
+		</dependencies>
+    </dependencyManagement>
 
     <dependencies>
     	<!-- VSDS -->
         <dependency>
             <groupId>be.vlaanderen.informatievlaanderen</groupId>
             <artifactId>ldes-client</artifactId>
-            <version>${ldes-client.version}</version>
         </dependency>
         
         <!-- Spring boot -->
