--- a/pom.xml
+++ b/pom.xml
@@ -46,6 +46,7 @@
         <mockito.version>4.8.1</mockito.version>
         <junit-jupiter.version>5.9.1</junit-jupiter.version>
         <awaitility.version>4.2.0</awaitility.version>
+		<wiremock-jre8.version>2.35.0</wiremock-jre8.version>
 
         <!-- CODE FORMATTER -->
         <formatter-maven-plugin.version>2.21.0</formatter-maven-plugin.version>
@@ -95,6 +96,12 @@
             <artifactId>mockito-core</artifactId>
             <version>${mockito.version}</version>
             <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>com.github.tomakehurst</groupId>
+            <artifactId>wiremock-jre8</artifactId>
+            <scope>test</scope>
+            <version>${wiremock-jre8.version}</version>
         </dependency>
         <dependency>
             <groupId>org.awaitility</groupId>
