--- a/.github/workflows/build-project.yml
+++ b/.github/workflows/build-project.yml
@@ -21,8 +21,8 @@ jobs:
           java-version: '18'
           distribution: 'adopt'
           server-id: github-client-sdk
-          server-username: GITHUB_USER_REF
-          server-password: GITHUB_TOKEN_REF
+          server-username: CLIENT_USERNAME
+          server-password: CLIENT_PASSWORD
       - name: Cache SonarCloud packages
         uses: actions/cache@v1
         with:
@@ -40,8 +40,8 @@ jobs:
         env:
           GITHUB_USER_REF: ${{ secrets.USER_NAME }} # Temporary hack to get around PAT for github packages
           GITHUB_TOKEN_REF: ${{ secrets.ACCESS_TOKEN }} # Temporary hack to get around PAT for github packages
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}  # Needed to get PR information, if any
-          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+          CLIENT_USERNAME: ${{ secrets.USER_NAME }} # Temporary hack to get around PAT for github packages
+          CLIENT_PASSWORD: ${{ secrets.ACCESS_TOKEN }} # Temporary hack to get around PAT for github packages
         run: mvn -B verify org.sonarsource.scanner.maven:sonar-maven-plugin:sonar -Dsonar.projectKey=Informatievlaanderen_VSDS-LDESClientCli -Pcoverage
       - name: Build (Forks) # https://portal.productboard.com/sonarsource/1-sonarcloud/c/50-sonarcloud-analyzes-external-pull-request
         if: ${{ github.event.pull_request.head.repo.full_name != 'Informatievlaanderen/VSDS-LDESClientCli' }}
