--- a/pom.xml
+++ b/pom.xml
@@ -243,7 +243,7 @@
             <url>https://repo1.maven.org/maven2</url>
         </repository>
         <repository>
-            <id>github-client-sdk</id>
+            <id>github</id>
             <url>https://maven.pkg.github.com/Informatievlaanderen/VSDS-LDESClient4J</url>
         </repository>
     </repositories>
