--- a/.github/workflows/release-version.yml
+++ b/.github/workflows/release-version.yml
@@ -1,4 +1,4 @@
-name: Release 1. Build, Deploy and Release Project
+name: 3. Build, Deploy and Release Project
 
 on:
   workflow_dispatch:
@@ -11,11 +11,6 @@ jobs:
       - name: Build and Test
         uses: qcastel/github-actions-maven-cmd@master
         with:
-          java-version: '18'
-          distribution: 'adopt'
-          server-id: github-client-sdk
-          server-username: CLIENT_SDK_USERNAME
-          server-password: CLIENT_SDK_PASSWORD
           maven-args: "clean install"
 
       - name: Release
