--- a/.github/workflows/build-project.yml
+++ b/.github/workflows/build-project.yml
@@ -33,11 +33,11 @@ jobs:
           key: ${{ runner.os }}-m2-${{ hashFiles('**/pom.xml') }}
           restore-keys: ${{ runner.os }}-m2
       - name: Build and analyze
-        if: ${{ github.event.pull_request.head.repo.full_name == 'Informatievlaanderen/VSDS-LDESClientCli' || (github.event.pull_request.merged == true) }}
+        if: ${{ (github.event.pull_request.head.repo.full_name == 'Informatievlaanderen/VSDS-LDESClientCli') || (github.ref == 'refs/heads/main') }}
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
         run: mvn -B verify org.sonarsource.scanner.maven:sonar-maven-plugin:sonar -Dintegrationtestskip=true -Dsonar.projectKey=Informatievlaanderen_VSDS-LDESClientCli -Pcoverage
       - name: Build (Forks) # https://portal.productboard.com/sonarsource/1-sonarcloud/c/50-sonarcloud-analyzes-external-pull-request
-        if: ${{ github.event.pull_request.head.repo.full_name != 'Informatievlaanderen/VSDS-LDESClientCli' && (github.event.pull_request.merged != true)}}
+        if: ${{ (github.event.pull_request.head.repo.full_name != 'Informatievlaanderen/VSDS-LDESClientCli') && (github.ref != 'refs/heads/main')}}
         run: mvn -B verify -Dintegrationtestskip=true
