--- a/.github/workflows/release-version.yml
+++ b/.github/workflows/release-version.yml
@@ -10,6 +10,8 @@ jobs:
       - uses: actions/checkout@v3
       - name: Build and Test
         uses: qcastel/github-actions-maven-cmd@master
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           maven-args: "clean install"
 
