--- a/.github/workflows/release-version.yml
+++ b/.github/workflows/release-version.yml
@@ -8,12 +8,11 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
-      - name: Build and Test
-        uses: qcastel/github-actions-maven-cmd@master
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        with:
-          maven-args: "clean install"
+#      - name: Build and Test
+#        uses: qcastel/github-actions-maven-cmd@master
+#        with:
+#          maven-servers: [{"id": "github", "username": ${{ secrets.USER_NAME }}, "password": ${{ secrets.ACCESS_TOKEN }}}]
+#          maven-args: "clean install"
 
       - name: Release
         uses: qcastel/github-actions-maven-release@master
