--- a/.github/workflows/release-version.yml
+++ b/.github/workflows/release-version.yml
@@ -20,6 +20,7 @@ jobs:
           git-release-bot-name: "Maven Release"
           git-release-bot-email: "maven@release.io"
 
+          maven-servers: [{"id": "github", "username": ${{ secrets.USER_NAME }}, "password": ${{ secrets.ACCESS_TOKEN }}}]
           maven-args: "-Dmaven.javadoc.skip=true -DskipTests -DskipITs -Ddockerfile.skip -DdockerCompose.skip -Dmaven.deploy.skip=true"
           ssh-private-key: ${{ secrets.SSH_PRIVATE_KEY }}
           release-branch-name: 'main'
