Revert "Get mvn version"
This reverts commit ed7f102a407cb0f43b9048d9474c32a07f3db105.

--- a/.github/workflows/publish-release.yml
+++ b/.github/workflows/publish-release.yml
@@ -22,10 +22,11 @@ jobs:
           distribution: zulu
           java-version: 18
 
-      - name: Get Version From mvn
+      - name: Publish Jar to GitHub Packages
         env:
           GITHUB_TOKEN: ${{ github.token }}
         run: |
+          mvn deploy
           export VERSION=$(mvn help:evaluate -Dexpression="project.version" -q -DforceStdout)
           echo "version=$VERSION" >> $GITHUB_ENV
 
