--- a/pom.xml
+++ b/pom.xml
@@ -269,6 +269,6 @@
         <connection>scm:git:${project.scm.url}</connection>
         <developerConnection>scm:git:${project.scm.url}</developerConnection>
         <url>git@github.com:Informatievlaanderen/VSDS-LDESClientCli.git</url>
-        <tag>1.0.1</tag>
+        <tag>${ldes-client.version}</tag>
     </scm>
 </project>
