--- a/pom.xml
+++ b/pom.xml
@@ -52,7 +52,7 @@
 		<skipFormatCode>false</skipFormatCode>
 
 		<!-- Logging -->
-		<slf4j.version>1.7.36</slf4j.version>
+		<slf4j.version>2.0.5</slf4j.version>
 	</properties>
 
 	<dependencyManagement>
@@ -128,12 +128,12 @@
 		<dependency>
 			<groupId>org.slf4j</groupId>
 			<artifactId>slf4j-api</artifactId>
-			<version>1.7.5</version>
+			<version>${slf4j.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>org.slf4j</groupId>
 			<artifactId>slf4j-simple</artifactId>
-			<version>1.6.4</version>
+			<version>${slf4j.version}</version>
 		</dependency>
 	</dependencies>
 
